--- a/catweb/src/assets/css/base.css
+++ b/catweb/src/assets/css/base.css
@@ -40,6 +40,10 @@ a {
     cursor: url('../../assets/images/cursor-hover.png'), auto;
 }
 
+ul, ol {
+    list-style: none;
+}
+
 .clear-fix::after {
     clear: both;
     content: '';
@@ -104,4 +108,11 @@ a {
 
 .fx-warp {
     flex-wrap: wrap;
+}
+
+/* 字体省略号 */
+.text-elli {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
